--- a/index.html
+++ b/index.html
@@ -36,12 +36,14 @@
 		<h1>Learning Ressources</h1>
 		<a href='https://www.imabi.net/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">imabi</a>
 		<a href='https://jlptsensei.com/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">jlptsensei</a>
+		<a href='https://bunpro.jp/grammar_points' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">bunpro</a>
 		<a href='https://www.ici-japon.com/apprendre-le-japonais/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">ici-japon</a>
 		<a href='https://www.erin.jpf.go.jp/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">erin's challenge</a>
 		<a href='https://tsunagarujp.bunka.go.jp/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">tsunagarujp</a>
 		<a href='https://www.nhk.or.jp/lesson/english/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">nhk easy japanese</a>
 		<a href='https://archive.org/details/Genki/Genki%20-%20Elementary%20Japanese%20I/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">genki elementary</a>
 		<a href='https://yomuyomu.app/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">yomuyomu</a>
+		<a href='https://freejapanesebooks.com/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">freejapanesebooks</a>
 	</div>
 
 	<div class='tt' id='el4'>
@@ -185,6 +187,14 @@
 
 			case 'pixiv comic':
 			infcont = '• section of pixiv dedicated to mangas partially or totally available for free';
+			break
+
+			case 'bunpro':
+			infcont = '• every grammar point from N5 to N1';
+			break
+
+			case 'freejapanesebooks':
+			infcont = '• collection of japanese learning books from N5 to N1 in PDF';
 			break
 
 			case 'syosetu':
