--- a/index.html
+++ b/index.html
@@ -79,11 +79,12 @@
 
 
 	<div class='tt' id='el6'>
-		<h1>Exemples Sentences</h1>
+		<h1>Example Sentences</h1>
 		<a href='http://yourei.jp/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">yourei</a>
 		<a href='https://sentencesearch.neocities.org/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">sentencesearch</a>
 		<a href='https://nlb.ninjal.ac.jp/search/' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">ninjal</a>
 		<a href='https://massif.la/ja' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">massif</a>
+		<a href='https://www.kanshudo.com/searcht' onmouseout="delinfo()" onmouseover="getinf(this.innerHTML)">kanshudo</a>
 	</div>
 
 	<div class='tt' id='el7'>
@@ -220,7 +221,7 @@
 			break
 
 			case 'yourei':
-			infcont = '• search examples sentences';
+			infcont = '• search example sentences';
 			break
 
 			case 'genki elementary':
